force-app/main/default/objects/custom_create118__c/custom_create118__c.object-meta.xml
<CustomObject>
    <label>Custom created object118</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects118</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>