force-app/main/default/objects/custom_create118__c/fields/custom_create_118field510__c.field-meta.xml
<CustomField>
    <fullName>custom_create_118field510__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 118field510</label>
    <type>Checkbox</type>
</CustomField>