force-app/main/default/objects/custom_create118__c/fields/custom_create_118field634__c.field-meta.xml
<CustomField>
    <fullName>custom_create_118field634__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 118field634</label>
    <type>Checkbox</type>
</CustomField>